<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_debug"
        android:title="@string/prefDebugTitle"
        android:summary="@string/prefDebugSummary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_Outoor"
        android:title="@string/prefOutdoorTitle"
        android:summary="@string/prefOutdoorSummary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_Magneto"
        android:title="@string/prefMagnetoTitle"
        android:summary="@string/prefMagnetoSummary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_compat"
        android:title="Bluetooth Compatibility Mode"
        android:summary="Enable skipping of UUID-Check for Android 5 BT Bug"
        android:defaultValue="false" />

</PreferenceScreen>